@@ -11,6 +11,18 @@ INCLUDES = $(GLIB_CFLAGS) $(GMODULE_CFLAGS) -I$(top_srcdir)	\
 	-DMONO_ASSEMBLIES=\""$(assembliesdir)"\"		
 
 
+if THREADS_PTHREAD
+THREAD_SOURCE = \
+	threads-pthread.c	\
+	threads-pthread.h	\
+	#
+else
+THREAD_SOURCE = \
+	threads-dummy.h		\
+	threads-dummy.c		\
+	#
+endif
+
 libmetadata_a_SOURCES = \
 	assembly.c	\
 	image.c		\
@@ -22,8 +34,7 @@ libmetadata_a_SOURCES = \
 	object.c	\
 	icall.c		\
 	threads.h	\
-	threads-pthread.c	\
-	threads-pthread.h	\
+	$(THREAD_SOURCE)	\
 	#
 
 libmetadataincludedir = $(includedir)/mono/metadata
@@ -46,6 +57,6 @@ libmetadatainclude_HEADERS = \
 pedump_SOURCES =		\
 	pedump.c $(libmetadata_a_SOURCES)
 
-pedump_LDADD = $(GLIB_LIBS) $(GMODULE_LIBS) $(PTHREAD_LIBS)
+pedump_LDADD = $(GLIB_LIBS) $(GMODULE_LIBS) $(THREAD_LIBS)
 
 
